--- a/millerabigail.github.io/index.html
+++ b/millerabigail.github.io/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
-<html>
-  <title>Hello Testing!</title>
+<html> 
+  <title>Hello Testing! This will be a website hosted on github</title>
 </html>
